[package]
name = "geocoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"]}
urlencoding = { version = "2.1.3" }
